--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -354,9 +354,9 @@
 
 
         <!--new scripts-->
-        @Scripts.Render("~/Scripts/comments/jquery-2.1.3.min")
-        @Scripts.Render("~/Scripts/comments/owl.carousel.min")
-        @Scripts.Render("~/Scripts/comments/custom")
+       <!--<script src="~/Scripts/comments/jquery-2.1.3.min.js"></script>-->
+        <script src="~/Scripts/comments/owl.carousel.min.js"></script>
+        <script src="~/Scripts/comments/custom.js"></script>
         <!--end new scripts-->
 
 
