--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -192,21 +192,21 @@
             <div class="owl-carousel block-items">
                 <div class="item">
                     <div class="inner-testimonial">
-                        <img src="img/client1.png" class="full-opacity" alt="Клиент 1">
+                        <img src="~/Content/images/client1.png" class="full-opacity" alt="Клиент 1">
                         <h3 class="city-name">Иван, Москва</h3>
                         <p class="text-testimonial">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Рот последний на берегу послушавшись, подзаголовок! Грамматики живет власти текст дорогу.</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="inner-testimonial">
-                        <img src="img/client2.png" class="full-opacity" alt="Клиент 2">
+                        <img src="~/Content/images/client2.png" class="full-opacity" alt="Клиент 2">
                         <h3 class="city-name">Светлана, Екатеринбург</h3>
                         <p class="text-testimonial">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Рот последний на берегу послушавшись, подзаголовок! Грамматики живет власти текст дорогу.</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="inner-testimonial">
-                        <img src="img/client3.png" class="full-opacity" alt="Клиент 3">
+                        <img src="~/Content/images/client3.png" class="full-opacity" alt="Клиент 3">
                         <h3 class="city-name">Александр, Ярославль</h3>
                         <p class="text-testimonial">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Рот последний на берегу послушавшись, подзаголовок! Грамматики живет власти текст дорогу.</p>
                     </div>
