--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Managers/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Managers/Edit.cshtml
@@ -12,7 +12,7 @@
         }
     </script>
 }
-@Html.Partial("_navigation", "profile")
+@Html.Partial("_navigation", "users")
 
 <div id="adminka1" class="tabset_content tabset_content_active">
     <h2 class="tabset_label">adminka</h2>
