--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
         </ul>
         <a href="/sale/flat/" class="moremore" id="more">Смотреть больше</a>
     </div>
- 
+
 
     <div class="d-carousel" id="p">
         <h2><span>Квартиры</span> в Новостроях</h2>
@@ -86,9 +86,9 @@
                 </li>
             }
         </ul>
-            <a href="/newbuilding/" id="more">Смотреть больше</a>
-        </div>
-    
+        <a href="/newbuilding/" id="more">Смотреть больше</a>
+    </div>
+
 
     <div class="d-carousel" id="p">
         <h2><span>Продажа</span> квартир</h2>
@@ -118,7 +118,7 @@
         </ul>
         <a href="/sale/flat/" id="more">Смотреть больше</a>
     </div>
-  
+
 
     <div class="d-carousel" id="p">
         <h2><span>Продажа</span> домов и участков</h2>
@@ -148,7 +148,7 @@
         </ul>
         <a href="/sale/house/" id="more">Смотреть больше</a>
     </div>
-    
+
     <div class="d-carousel" id="p">
         <h2><span>Коммерческая</span> недвижимость</h2>
         <div class="streak"></div>
@@ -186,10 +186,16 @@
 
 <div id="testimonials">
     <div class="container">
-        <div class="block-one-example">
-
-            <div id="customNav" class="owl-my-nav"></div>
-            <div class="owl-carousel block-items">
+        <div class="f-next"></div>
+        <div class="f-previous"></div>
+        <div class="thumbs">
+            <a href="#" onclick="" class="f1 thumbActive" id="f-a"></a>
+            <a href="#" onclick="" class="f2" id="f-b"></a>
+            <a href="#" onclick="" class="f3" id="f-c"></a>
+            @*<a href="#" onclick="" class="f4" id="f-d"></a>*@
+        </div>
+        <ul>
+            <li>
                 <div class="item">
                     <div class="inner-testimonial">
                         <img src="~/Content/images/client1.png" class="full-opacity" alt="Клиент 1">
@@ -197,6 +203,8 @@
                         <p class="text-testimonial">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Рот последний на берегу послушавшись, подзаголовок! Грамматики живет власти текст дорогу.</p>
                     </div>
                 </div>
+            </li>
+            <li>
                 <div class="item">
                     <div class="inner-testimonial">
                         <img src="~/Content/images/client2.png" class="full-opacity" alt="Клиент 2">
@@ -204,6 +212,8 @@
                         <p class="text-testimonial">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Рот последний на берегу послушавшись, подзаголовок! Грамматики живет власти текст дорогу.</p>
                     </div>
                 </div>
+            </li>
+            <li>
                 <div class="item">
                     <div class="inner-testimonial">
                         <img src="~/Content/images/client3.png" class="full-opacity" alt="Клиент 3">
@@ -211,7 +221,9 @@
                         <p class="text-testimonial">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Рот последний на берегу послушавшись, подзаголовок! Грамматики живет власти текст дорогу.</p>
                     </div>
                 </div>
-            </div>
-        </div><!-- .block-one-example -->
+            </li>
+            @*<li><iframe width="1500" height="380" src="https://www.youtube.com/embed/gH3NfPbh42Q" frameborder="0" allowfullscreen></iframe></li>*@
+        </ul>
+
     </div>
 </div>
