--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -353,11 +353,11 @@
 
 
 
-        <!--new scripts-->
+        @*<!--new scripts-->
        <!--<script src="~/Scripts/comments/jquery-2.1.3.min.js"></script>-->
         <script src="~/Scripts/comments/owl.carousel.min.js"></script>
         <script src="~/Scripts/comments/custom.js"></script>
-        <!--end new scripts-->
+        <!--end new scripts-->*@
 
 
 
@@ -392,6 +392,30 @@
                     $(btnGo[to]).addClass("thumbActive");
                 }
             });
+            $('#testimonials').jCarouselLite({
+                vertical: false,
+                hoverPause: true,
+                btnPrev: ".f-previous",
+                btnNext: ".f-next",
+                visible: 1,
+                start: 0,
+                scroll: 1,
+                circular: true,
+                auto: 6000,
+                speed: 900,
+                btnGo:
+        		[".f1", ".f2",
+        		".f3"],
+
+                afterEnd: function (a, to, btnGo) {
+                    if (btnGo.length <= to) {
+                        to = 0;
+                    }
+                    $(".thumbActive").removeClass("thumbActive");
+                    $(btnGo[to]).addClass("thumbActive");
+                }
+            });
+            
         });
     </script>
     <!-- TO TOP -->
