--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -168,7 +168,7 @@
 
 
 
-    <div class="container" id="container">
+    <!--<div class="container" id="container">-->
         <!--
         <div id="slidebox">
             <div class="textinslider">
@@ -294,25 +294,25 @@
             </div>
         }
     </div>
-        <div class="container" id="container">
-            <div class="footer">
 
-                
-                    <div id="toTop"></div>
-                    <div class="social">
-                        <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
-                        <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
-                        <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
-                        @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
-                    </div>
-                    <div class="bottomnav">
-                        <a href="/news/" class="">Новости</a>
-                        <a href="/home/contacts/" class="">Контакты</a>
-                        <a href="/map/" class="">Карта сайта</a>
-                        <a href="/feedback/" class="">Отзывы</a>
-                        @if (Session == null || Session["user"] == null)
-                        {
-                            <a class="f" data-dropdown="login-modal" data-options="align:top ignore_repositioning" aria-controls="login-modal" aria-expanded="false" href="/login">Войти</a>
+
+    <div class="footer">
+        <div class="container" id="container">
+            <div id="toTop"></div>
+            <div class="social">
+                <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
+                <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
+                <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
+                @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
+            </div>
+            <div class="bottomnav">
+                <a href="/news/" class="">Новости</a>
+                <a href="/home/contacts/" class="">Контакты</a>
+                <a href="/map/" class="">Карта сайта</a>
+                <a href="/feedback/" class="">Отзывы</a>
+                @if (Session == null || Session["user"] == null)
+                {
+                    <a class="f" data-dropdown="login-modal" data-options="align:top ignore_repositioning" aria-controls="login-modal" aria-expanded="false" href="/login">Войти</a>
                             <div class="forms-wrapper">
                                 <div class="form-drop f-dropdown drop-top" tabindex="-1" data-dropdown-content aria-hidden="true" id="login-modal">
                                     <ol class="login">
@@ -326,15 +326,16 @@
                                     </ol>
                                 </div>
                             </div>
-                        }
-                        else
-                        {
-                            @Html.ActionLink("Выйти", "logout", "authorize")
-                        }
-                    </div>
-                
+                }
+                else
+                {
+                    @Html.ActionLink("Выйти", "logout", "authorize")
+                }
             </div>
+
         </div>
+    </div>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jcarouselLite")
     @RenderSection("scripts", required: false)
