--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -39,11 +39,10 @@
             {
                     <li>
                         <a href="">
-
+                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
                             <h3>Продам дом</h3>
                             <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                            <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
+                            <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                             <div class="meters">
                                 <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
                                 <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
@@ -69,11 +68,10 @@
             {
                     <li>
                         <a href="">
-
+                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
                             <h3>Продам дом</h3>
                             <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                            <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
+                            <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                             <div class="meters">
                                 <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
                                 <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
@@ -99,11 +97,10 @@
             {
                     <li>
                         <a href="">
-
+                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
                             <h3>Продам дом</h3>
                             <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                            <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
+                            <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                             <div class="meters">
                                 <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
                                 <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
@@ -129,11 +126,10 @@
             {
                     <li>
                         <a href="">
-
+                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
                             <h3>Продам дом</h3>
                             <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                            <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
+                            <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                             <div class="meters">
                                 <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
                                 <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
@@ -158,11 +154,11 @@
             {
                     <li>
                         <a href="">
+                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
 
                             <h3>Продам дом</h3>
                             <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                            <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
+                            <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                             <div class="meters">
                                 <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
                                 <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
