--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
             {
                     <li>
                         <a href="">
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                            <div class="redimg"><img src="~/Content/images/newred.jpg"></div>
                             <h3>Продам дом</h3>
                             <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
                             <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
@@ -97,7 +97,7 @@
             {
                     <li>
                         <a href="">
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                            <div class="redimg"><img src="~/Content/images/eksklusiv.jpg"></div>
                             <h3>Продам дом</h3>
                             <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
                             <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
@@ -241,12 +241,7 @@
             </li>
             @*<li><iframe width="1500" height="380" src="https://www.youtube.com/embed/gH3NfPbh42Q" frameborder="0" allowfullscreen></iframe></li>*@
         </ul>
-        <div class="thumbs">
-            <a href="#" onclick="" class="f1 thumbActive" id="f-a"></a>
-            <a href="#" onclick="" class="f2" id="f-b"></a>
-            <a href="#" onclick="" class="f3" id="f-c"></a>
-            @*<a href="#" onclick="" class="f4" id="f-d"></a>*@
-        </div>
+        
     </div>
 </div>
     
