--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -202,7 +202,7 @@
                 <li><iframe width="1500" height="380" src="https://www.youtube.com/embed/gH3NfPbh42Q" frameborder="0" allowfullscreen></iframe></li>
             </ul>
         </div>
-    </div>
+    </div>-->
     <div class="header_mobile">
         <input type="checkbox" id="hmt" class="hidden-menu-ticker">
         <label class="btn-menu" for="hmt">
@@ -263,7 +263,7 @@
             </p>
         </div>
     </div>
-            -->
+            
     <div class="container" id="container">
         @RenderBody()
         @if (ViewBag.Articles != null)
