--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -294,10 +294,39 @@
             </div>
         }
     </div>
+    <div class="container" id="container">
+        <div id="partners">
+            <div class="f-next"></div>
+            <div class="f-previous"></div>
+
+            <ul>
+                <li>
+                    <img src="~/Content/images/bud.png" />
+                </li>
+                <li>
+                    <img src="~/Content/images/kadorr.png" />
+                </li>
+                <li>
+                    <img src="~/Content/images/od.png" />
+                </li>
+                <li>
+                    <img src="~/Content/images/ok.png" />
+                </li>
+                <li>
+                    <img src="~/Content/images/riv.png" />
+                </li>
+                <li>
+                    <img src="~/Content/images/gefest.png" />
+                </li>
+            </ul>
+
+        </div>
+    </div>
 
 
     <div class="footer">
         <div class="container" id="container">
+            <div class="wrapper-footer">
             <div id="toTop"></div>
             <div class="social">
                 <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
@@ -334,6 +363,7 @@
             </div>
 
         </div>
+            </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
@@ -410,6 +440,31 @@
                     $(btnGo[to]).addClass("thumbActive");
                 }
             });
+            
+       
+        $('#partners').jCarouselLite({
+            vertical: false,
+            hoverPause: true,
+            btnPrev: ".f-previous",
+            btnNext: ".f-next",
+            visible: 1,
+            start: 0,
+            scroll: 1,
+            circular: true,
+            auto: 1000,
+            speed: 900,
+            btnGo:
+            [".f1", ".f2",
+            ".f3"],
+
+            afterEnd: function (a, to, btnGo) {
+                if (btnGo.length <= to) {
+                    to = 0;
+                }
+                $(".thumbActive").removeClass("thumbActive");
+                $(btnGo[to]).addClass("thumbActive");
+            }
+        });
             
         });
     </script>
