--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -294,6 +294,10 @@
             </div>
         }
     </div>
+
+
+
+    <h2><span>Наши</span> партнеры</h2>
     <div class="container" id="container">
         <div id="partners">
             <div class="f-next"></div>
@@ -447,7 +451,7 @@
             hoverPause: true,
             btnPrev: ".f-previous",
             btnNext: ".f-next",
-            visible: 1,
+            visible: 6,
             start: 0,
             scroll: 1,
             circular: true,
