--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -168,8 +168,8 @@
 
 
 
-    <!--<div class="container" id="container">-->
-        <!--
+    <div class="container" id="container">-->
+        
         <div id="slidebox">
             <div class="textinslider">
                 <div class="h1">
@@ -202,7 +202,10 @@
                 <li><iframe width="1500" height="380" src="https://www.youtube.com/embed/gH3NfPbh42Q" frameborder="0" allowfullscreen></iframe></li>
             </ul>
         </div>
-    </div>-->
+    </div>
+
+
+
     <div class="header_mobile">
         <input type="checkbox" id="hmt" class="hidden-menu-ticker">
         <label class="btn-menu" for="hmt">
